<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register_login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/TopBar"
        android:background="@drawable/top_bar">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_login"
            style="@style/TextTopBar" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_box"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            style="@style/TextBox" />
        <EditText
            android:id="@+id/txt_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password"
            style="@style/TextBox" />
        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/button_forgot_password"
            android:background="@color/transparent" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_login"
            style="@style/Button" />
    </LinearLayout>
</RelativeLayout>