<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/vw_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Frame" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_box"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/TopBar"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_top_bar">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_sdk_special_code"
                style="@style/TextTopBar" />
        </RelativeLayout>
        <TextView
            android:id="@+id/lbl_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_label_sdk_special_code"
            style="@style/Text" />
        <EditText
            android:id="@+id/txt_wallet_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_sdk_special_code"
            style="@style/TextBox" />
        <requestFocus />
        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="10dp"
            android:text="@string/button_apply"
            style="@style/Button" />
    </LinearLayout>
</RelativeLayout>