<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/vw_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Frame" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_box"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/TopBar"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_top_bar">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_forgot"
                style="@style/TextTopBar" />
        </RelativeLayout>
        <EditText
            android:id="@+id/txt_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionSend"
            style="@style/TextBox" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/button_send"
                style="@style/ButtonOK" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/button_cancel"
                style="@style/ButtonNO" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>