<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">
    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/instruct_put_finger"
            style="@style/TextWhite" />
        <ImageButton
            android:id="@+id/btn_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint"
            android:background="@color/transparent"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/blank" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/TextTitle"
            android:text="@string/instruct_congrate"
            style="@style/TextWhite" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/instruct_success"
            style="@style/TextWhite" />
        <TextView
            android:id="@+id/lbl_offer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/TextTitle"
            style="@style/TextWhite" />
        <TextView
            android:id="@+id/lbl_unique_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instruct_code"
            android:textSize="@dimen/TextTitle"
            style="@style/TextWhite"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/lbl_unique_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/Base"
            style="@style/TextLarge"
            android:visibility="invisible" />
        <RelativeLayout
            android:id="@+id/lay_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:visibility="invisible">
            <ImageView
                android:id="@+id/img_barcode"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/blank" />
            <TextView
                android:id="@+id/lbl_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_barcode"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                style="@style/TextTitle" />
        </RelativeLayout>
   </LinearLayout>
</ScrollView>