<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/vw_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Frame" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/rounded_box"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/TopBar"
            android:layout_margin="0.5dp"
            android:background="@drawable/top_bar">
            <TextView
                android:id="@+id/lbl_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_dual"
                style="@style/TextTopBar" />
        </RelativeLayout>
        <TextView
            android:id="@+id/lbl_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/text_label_dual_caption"
            android:textColor="#000000"
            android:textSize="16sp" />
        <LinearLayout
            android:id="@+id/lay_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"></LinearLayout>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            style="@style/ButtonOK"
            android:text="@string/button_ok" />
    </LinearLayout>
</RelativeLayout>